--- a/styles/main.css
+++ b/styles/main.css
@@ -6560,7 +6560,7 @@
 .focus-overlay__sheet {
   outline: 3px dashed red !important;
 }
-  #allTasksOverlay {
+  #AllTasksOverlay {
   position: fixed;
   inset: 0;
   width: 100vw;
@@ -6574,7 +6574,7 @@
   overflow-y: auto;
 }
 
-#allTasksOverlay:not(.hidden) {
+#AllTasksOverlay:not(.hidden) {
   display: flex;
 }
 
